syntax = "proto3";
package engine;

service Engine {
    // on-chain interactions --------------- -----------------
    rpc execute_deposit (DepositMessage) returns (DepositResponse);

    rpc execute_withdrawal (WithdrawalMessage) returns (SuccessResponse);

    rpc execute_escape (EscapeMessage) returns (SuccessResponse);

    // order executions --------------- ----------------- -------------------
    rpc submit_limit_order (LimitOrderMessage) returns (OrderResponse);

    rpc submit_perpetual_order (PerpOrderMessage) returns (OrderResponse);

    rpc submit_liquidation_order (LiquidationOrderMessage) returns (LiquidationOrderResponse);

    // order interactions (amend/cancel ...) --------------- ----------------- ----------------
    rpc cancel_order (CancelOrderMessage) returns (CancelOrderResponse);

    rpc amend_order (AmendOrderRequest) returns (AmendOrderResponse);

    // note/position helpers --------------- ----------------- ----------------
    rpc split_notes (SplitNotesReq) returns (SplitNotesRes);

    rpc change_position_margin (MarginChangeReq) returns (MarginChangeRes);

    // Order tabs --------------- ----------------- ----------------
    rpc open_order_tab (OpenOrderTabReq) returns (OpenOrderTabRes);

    rpc close_order_tab (CloseOrderTabReq) returns (CloseOrderTabRes);

    // On chain initiated order tabs --------------- ----------------- ----------------
    rpc register_onchain_mm (OnChainRegisterMMReq) returns (OnChainScmmRes);

    rpc add_liquidity_mm (OnChainAddLiqReq) returns (OnChainScmmRes);

    rpc remove_liquidity_mm (OnChainRemoveLiqReq) returns (OnChainScmmRes);

    rpc close_onchain_mm (OnChainCloseMmReq) returns (OnChainScmmRes);

    // admin --------------- ----------------- ----------------
    rpc finalize_batch (EmptyReq) returns (FinalizeBatchResponse);

    rpc update_index_price (OracleUpdateReq) returns (SuccessResponse);

    rpc restore_orderbook (RestoreOrderBookMessage) returns (SuccessResponse);

    rpc register_onchain_action (RegisterOnchainActionRequest) returns (SuccessResponse);

    rpc update_invalid_state_indexes (UpdateDbIndexesReq) returns (SuccessResponse);

    // queries --------------- ----------------- ----------------
    rpc get_orders (OrdersReq) returns (OrdersRes);

    rpc get_liquidity (LiquidityReq) returns (LiquidityRes);

    rpc get_index_prices (EmptyReq) returns (IndexPriceRes);

    rpc get_funding_info (FundingReq) returns (FundingRes);

    rpc get_state_info (StateInfoReq) returns (StateInfoRes);

}

// * TRANSACTION ENGINE =======================================================================================

// ------ DEPOSITS --------------

message DepositMessage {
    uint64 deposit_id = 1;
    uint32 deposit_token = 2;
    uint64 deposit_amount = 3;
    string stark_key = 4;
    repeated GrpcNote notes = 5;
    Signature signature = 6;
} 


message DepositResponse {
    bool successful = 1;
    repeated uint64 zero_idxs = 2;
    string error_message = 3;
}

// ------ SWAPS --------------


message LimitOrderMessage {
    uint64 expiration_timestamp = 1;
    uint32 token_spent= 2;
    uint32 token_received = 3;
    uint64 amount_spent = 4;
    uint64 amount_received = 5;
    uint64 fee_limit = 6;
    SpotNotesInfoMessage spot_note_info = 7;
    GrpcOrderTab order_tab = 8;
    Signature signature = 9;
    bool is_market = 10; // true - market order, false - limit order
    uint64 user_id = 11; // used to send a response thorugh a ws
}



message SpotNotesInfoMessage {
    Address dest_received_address = 1;
    string dest_received_blinding = 2;
    repeated GrpcNote notes_in = 3;
    GrpcNote refund_note = 4;
}



message OrderResponse {
    bool successful = 1;
    uint64 order_id = 2; // new order id
    string error_message = 3;
}


message CancelOrderMessage {
    uint32 marketId = 1;
    uint64 order_id = 2;
    bool order_side = 3; // true-Bid, false-Ask
    uint64 user_id = 4; // used to verify that the user is the owner of the order
    bool is_perp = 5;
}

message CancelOrderResponse {
    bool successful = 1;
    GrpcNote pfr_note = 2;
    string error_message = 3;
}


message AmendOrderRequest {
    uint32 market_id = 1;
    uint64 order_id = 2;
    bool order_side = 3; // true-Bid, false-Ask
    double new_price = 4;
    uint64 new_expiration = 5;
    Signature signature = 6;
    uint64 user_id = 7; // used to verify that the user is the owner of the order
    bool is_perp = 8;
    bool match_only = 9; // if true - only match the order, if false - match and amend
}


message AmendOrderResponse {
    bool successful = 1;
    string error_message = 2;
}

// ------ WITHDRAWAL --------------

message WithdrawalMessage {
    uint32 withdrawal_chain_id = 1;
    uint32 withdrawal_token = 2;
    uint64 withdrawal_amount = 3;
    string recipient = 4;
    repeated GrpcNote notes_in = 5;
    GrpcNote refund_note = 6;
    Signature signature = 7;
} 


message SuccessResponse {
    bool successful = 1;
    string error_message = 2;
}

// ------ FORCED ESCAPE --------------


message EscapeMessage {
    uint32 escape_id = 1;
    repeated GrpcNote escape_notes = 2;
    Signature signature = 3;
    // OnChainRemoveLiqTabReq force_remove_liquidity_req = 3;
    GrpcOrderTab close_order_tab_req = 4;
    ForcePositionCloseMessage close_position_message = 5;
} 

message ForcePositionCloseMessage {
    GrpcPerpPosition position_a = 1; // user A Position to close
    uint64 close_price = 2; // Price at which to close the position
    GrpcOpenOrderFields open_order_fields_b = 3; // user B Open order fields
    GrpcPerpPosition position_b = 4; // user B Position to close
    string recipient = 5; // recipient of the funds
    Signature signature_a = 6;
    Signature signature_b = 7;
}


// ------ PERPETUALS --------------

message PerpOrderMessage {
    uint64 expiration_timestamp = 1;
    GrpcPerpPosition position = 2;
    uint32 position_effect_type = 3; // 0-open, 1-modify, 2-close, 3-liquidate
    bool order_side = 4;  // true-BID, false-ASK
    uint32 synthetic_token = 5;
    uint32 collateral_token = 6;
    uint64 synthetic_amount = 7;
    uint64 collateral_amount = 8;
    uint64 fee_limit = 9;
    GrpcOpenOrderFields open_order_fields = 10;
    GrpcCloseOrderFields close_order_fields  = 11;
    Signature signature = 12;
    bool is_market = 13; // true - market order, false - limit order
    uint64 user_id = 14; // used to send a response thorugh a ws
}



message GrpcPerpPosition {
    bool order_side = 1;  // true-BID, false-ASK
    GrcpPositionHeader position_header = 2;
    uint64 position_size = 3;
    uint64 margin = 4;
    uint64 entry_price = 5;
    uint64 liquidation_price = 6;
    uint64 bankruptcy_price = 7;
    uint32 last_funding_idx = 8;
    uint64 vlp_supply = 9;
    string hash = 10;
    uint64 index = 11 ;
}


message GrcpPositionHeader {
    uint32 synthetic_token = 1;
    string position_address = 2;
    bool allow_partial_liquidations = 3;
    uint32 vlp_token = 4;
}


// ------ LIQUIDATION ORDER --------------


message LiquidationOrderMessage {
    GrpcPerpPosition position = 1;
    bool order_side = 2;  // true-BID, false-ASK
    uint32 synthetic_token = 3;
    uint64 synthetic_amount = 4;
    uint64 collateral_amount = 5;
    GrpcOpenOrderFields open_order_fields = 6;
    Signature signature = 7;
    uint64 user_id = 8; // used to send a response thorugh a ws
}




message LiquidationOrderResponse {
    bool successful = 1;
    string error_message = 2;
    GrpcPerpPosition new_position = 3;
}



// ------ ORDERS TAB --------------

message OpenOrderTabReq {
    repeated GrpcNote base_notes_in = 1;
    GrpcNote base_refund_note = 2;
    repeated GrpcNote quote_notes_in = 3;
    GrpcNote quote_refund_note = 4;
    GrpcOrderTab order_tab = 5;
    bool add_only = 6;
    Signature signature = 7;
    uint32 market_id = 8;
}

message OpenOrderTabRes {
    bool successful = 1;
    string error_message = 2;
    GrpcOrderTab order_tab = 3;
}


message CloseOrderTabReq {
    GrpcOrderTab order_tab = 1;
    Signature signature = 2;
    GrpcCloseOrderFields base_close_order_fields = 3;
    GrpcCloseOrderFields quote_close_order_fields = 4;
    uint64 base_amount_change = 5;
    uint64 quote_amount_change = 6;

}

message CloseOrderTabRes {
    bool successful = 1;
    string error_message = 2;
    GrpcNote base_return_note = 3;
    GrpcNote quote_return_note = 4;
}

// SMART CONTRACT MMS ==================================================================================

message OnChainRegisterMMReq {
    GrpcPerpPosition position = 1;
    uint32 vlp_token = 2;
    Signature signature = 4;
    uint32 market_id = 5;
    uint32 synthetic_token = 6;
    uint32 mm_action_id = 7;
}


message OnChainScmmRes {
    bool successful = 1;
    string error_message = 2;
    GrpcPerpPosition position = 3;
}


// -------------------------------------------------------

message OnChainAddLiqReq {
    GrpcPerpPosition position = 1;
    string depositor = 2;
    uint64 initial_value = 3;
    Signature signature = 4;
    uint32 market_id = 5;
    uint32 synthetic_token = 6;
    uint32 mm_action_id = 7;
}

message OnChainRemoveLiqReq { 
    GrpcPerpPosition position = 1;
    string depositor = 2;
    uint64 initial_value = 3;
    uint64 vlp_amount = 4;
    Signature signature = 5;
    uint32 market_id = 6;
    uint32 synthetic_token = 7;
    uint32 mm_action_id = 8;
}

message OnChainCloseMmReq { 
    GrpcPerpPosition position = 1;
    uint64 initial_value_sum = 2;
    uint64 vlp_amount_sum = 3;
    Signature signature = 4;
    uint32 market_id = 5;
    uint32 synthetic_token = 6;
    uint32 mm_action_id = 7;
}

// ------ --------------------------------------------


message GrpcOrderTab {
    uint64 tab_idx = 1;
    GrpcTabHeader tab_header = 2;
    uint64 base_amount = 3;
    uint64 quote_amount = 4;
    
}

message GrpcTabHeader {
    uint32 base_token = 1;
    uint32 quote_token = 2;
    string base_blinding = 3;
    string quote_blinding = 4;
    string pub_key = 5;
}


// ------ ORDER BOOK ------------------

message SpotOrderRestoreMessageInner {
    uint64 order_id = 1;
    double price = 2;
    uint64 amount = 3;
    uint64 timestamp = 4;
    LimitOrderMessage order = 5;
}

message PerpOrderRestoreMessageInner {
    uint64 order_id = 1;
    double price = 2;
    uint64 amount = 3;
    uint64 timestamp = 4;
    PerpOrderMessage order = 5;
}


message SpotOrderRestoreMessage {
    uint64 market_id = 1;
    repeated SpotOrderRestoreMessageInner bid_order_restore_messages = 2;
    repeated SpotOrderRestoreMessageInner ask_order_restore_messages = 3;
}

message PerpOrderRestoreMessage{
    uint64 market_id = 1;
    repeated PerpOrderRestoreMessageInner bid_order_restore_messages = 2;
    repeated PerpOrderRestoreMessageInner ask_order_restore_messages = 3;
}


message RestoreOrderBookMessage {
    repeated SpotOrderRestoreMessage spot_order_restore_messages = 1;
    repeated PerpOrderRestoreMessage perp_order_restore_messages = 2;
}

// ---------------------------------

enum GrpcOnchainActionType {
    DEPOSIT = 0;
    MM_REGISTRATION = 1;
    MM_ADD_LIQUIDITY = 2;
    MM_REMOVE_LIQUIDITY = 3;
    MM_CLOSE_POSITION = 4;
    NOTE_ESCAPE = 5;
    TAB_ESCAPE = 6;
    POSITION_ESCAPE = 7;
}

message RegisterOnchainActionRequest {
    GrpcOnchainActionType action_type = 1;
    uint64 data_id = 2;
    string data_commitment = 3;
}

// ------ UTILS --------------

message GrpcOpenOrderFields {
    uint64 initial_margin = 1;
    uint32 collateral_token = 2;
    repeated GrpcNote notes_in = 3;
    GrpcNote refund_note = 4;
    string position_address = 5;
    bool allow_partial_liquidations = 7;
}

message GrpcCloseOrderFields {
    Address dest_received_address = 1;
    string dest_received_blinding = 2;
}

message GrpcNote {
    uint64 index = 1;
    Address address = 2;
    uint32 token = 3;
    uint64 amount = 4;
    string blinding = 5;
}

message Address {
    string x = 1;
    string y = 2;
}

message Signature {
    string r = 1;
    string s = 2;
}



// * LIQUIDITY ---------------------------------------------------

message LiquidityReq {
    bool is_perp = 1;
    uint32 market_id = 2;
}

// Vec<(f64, u64)>
message LiquidityRes {
    bool successful = 1;
    repeated BookEntry bid_queue = 2;
    repeated BookEntry ask_queue = 3;
    string error_message = 4;
}

message BookEntry {
    double price = 1;
    uint64 amount = 2;
    uint64 timestamp = 3;
}

// * FUNDING ---------------------------------------------------

message FundingReq {
}

message FundingRes {
    bool successful = 1;
    repeated FundingInfo fundings = 3;
    string error_message = 4; 
}

message FundingInfo {
    uint32 token = 1;
    repeated int64 funding_rates = 2;
    repeated uint64 funding_prices = 3;
}


message IndexPriceRes {
    repeated uint32 tokens = 1;
    repeated uint64 index_prices = 2;
}


// *  SPLIT NOTES --------------------------------------------------
message SplitNotesReq {
    repeated GrpcNote notes_in = 1;
    GrpcNote note_out = 2;
    GrpcNote refund_note = 3;
}

message SplitNotesRes {
    bool successful = 1;
    string error_message = 2;
    repeated uint64 zero_idxs = 3;
}

// *  MARGIN CHANGE --------------------------------------------------
message MarginChangeReq {
    int64 margin_change = 1;
    repeated GrpcNote notes_in = 2;
    GrpcNote refund_note = 3;
    GrpcCloseOrderFields close_order_fields = 4;
    GrpcPerpPosition position = 5;
    Signature signature = 6;
    uint64 user_id = 7; 
    
}

message MarginChangeRes {
    bool successful = 1;
    string error_message = 2;
    uint64 return_collateral_index = 3;
}



// * ORDERS --------------------------------------------------------


message OrdersReq {
    repeated uint64 order_ids = 1;
    repeated uint64 perp_order_ids = 2;
}

message OrdersRes {
    repeated uint64 bad_order_ids = 1;    // Non-existent or invalid order ids
    repeated ActiveOrder orders = 2;
    
    repeated uint64 bad_perp_order_ids = 3;    // Non-existent or invalid order ids
    repeated ActivePerpOrder perp_orders =4;

    repeated GrpcNote pfr_notes =5;
}


message ActiveOrder {
    uint64 order_id = 1;
    uint64 expiration_timestamp = 2;
    uint64 qty_left = 3;
    double price = 4;
    uint32 base_asset = 5;
    uint32 quote_asset = 6;
    bool order_side = 7;  // true-BID, false-ASK
    uint64 fee_limit = 8;
    repeated GrpcNote notes_in = 9;
    GrpcNote refund_note = 10;
    GrpcOrderTab order_tab = 11;

}

message ActivePerpOrder {
    uint64 order_id = 1;
    uint64 expiration_timestamp = 2;
    uint64 qty_left = 3;
    double price = 4;
    uint32 synthetic_token = 5;
    bool order_side = 6;  // true-BID, false-ASK
    uint32 position_effect_type = 7;
    uint64 fee_limit = 8;
    string position_address = 9;
    repeated GrpcNote notes_in = 10;
    GrpcNote refund_note = 11;
    uint64 initial_margin = 12; 
}




// * FINALIZE BATCH ---------------------------------------------------

message EmptyReq {
} 


message FinalizeBatchResponse {}



// * UPDATE INVALID INDEXES ---------------------------------------------------
message UpdateDbIndexesReq {
    repeated uint64 invalid_indexes = 1;
} 



// * ORACLE PRICE UPDATE ---------------------------------------------------

message OracleUpdateReq {
    repeated GrpcOracleUpdate oracle_price_updates = 1;
} 



message GrpcOracleUpdate {
    uint32 token = 1;
    uint32 timestamp = 2;
    repeated uint32 observer_ids = 3;
    repeated uint64 prices = 4;
    repeated Signature signatures = 5;
}




// STATE INFO ------------------------------------------------------------

message StateInfoReq {
} 



message StateInfoRes {
    repeated string state_tree = 1;
}

